@startuml
' ER-диаграмма для АИС магазина кастомных ПК
' Стиль диаграммы
skinparam monochrome true
skinparam defaultFontName Arial
skinparam fontSize 12

' ============================================
' Таблица ролей
' ============================================
entity "роли" as roles {
    *роль_id : INT <<PK>>
    --
    название_роли : VARCHAR(50)
}

' ============================================
' Таблица отделы
' ============================================
entity "отделы" as departments {
    *отдел_id : INT <<PK>>
    --
    название : VARCHAR(100)
}

' ============================================
' Таблица клиенты
' ============================================
entity "клиенты" as clients {
    *клиент_id : INT <<PK>>
    --
    тип_клиента : VARCHAR(20)
    фамилия : VARCHAR(100)
    имя : VARCHAR(100)
    отчество : VARCHAR(100)
    наименование_организации : VARCHAR(255)
    email : VARCHAR(255)
    номер_телефона : VARCHAR(20)
    дата_регистрации : DATETIME
}

' ============================================
' Таблица сотрудники
' ============================================
entity "сотрудники" as employees {
    *сотрудник_id : INT <<PK>>
    --
    фамилия : VARCHAR(100)
    имя : VARCHAR(100)
    отчество : VARCHAR(100)
    должность : VARCHAR(100)
    дата_приёма : DATE
    *отдел_id : INT <<FK>>
}

' ============================================
' Таблица пользователи
' ============================================
entity "пользователи" as users {
    *пользователь_id : INT <<PK>>
    --
    логин : VARCHAR(100)
    пароль : VARCHAR(255)
    *роль_id : INT <<FK>>
    сотрудник_id : INT <<FK>>
    клиент_id : INT <<FK>>
    активен : BIT
    дата_создания : DATETIME
    дата_последнего_входа : DATETIME
}

' ============================================
' Таблица склады
' ============================================
entity "склады" as warehouses {
    *склад_id : INT <<PK>>
    --
    название : VARCHAR(100)
    адрес : NVARCHAR(MAX)
}

' ============================================
' Таблица компоненты
' ============================================
entity "компоненты" as components {
    *компонент_id : INT <<PK>>
    --
    наименование : VARCHAR(255)
    тип : VARCHAR(50)
    производитель : VARCHAR(100)
}

' ============================================
' Таблица остатки_на_складе
' ============================================
entity "остатки_на_складе" as inventory {
    *компонент_id : INT <<PK, FK>>
    *склад_id : INT <<PK, FK>>
    --
    количество : INT
    дата_обновления : DATETIME
}

' ============================================
' Таблица заказы
' ============================================
entity "заказы" as orders {
    *заказ_id : INT <<PK>>
    --
    *клиент_id : INT <<FK>>
    статус : VARCHAR(50)
    общая_сумма : DECIMAL(12,2)
    дата_создания : DATETIME
    дата_отгрузки : DATETIME
}

' ============================================
' Таблица сборочные_задания
' ============================================
entity "сборочные_задания" as assemblies {
    *сборка_id : INT <<PK>>
    --
    название_конфигурации : VARCHAR(255)
    статус : VARCHAR(50)
    сотрудник_id : INT <<FK>>
    заказ_id : INT <<FK>>
    дата_начала : DATETIME
    дата_завершения : DATETIME
}

' ============================================
' Таблица компоненты_в_сборке
' ============================================
entity "компоненты_в_сборке" as assembly_components {
    *сборка_id : INT <<PK, FK>>
    *компонент_id : INT <<PK, FK>>
    --
    количество : INT
}

' ============================================
' Таблица аудит_изменений
' ============================================
entity "аудит_изменений" as audit {
    *аудит_id : INT <<PK>>
    --
    таблица : VARCHAR(100)
    операция : VARCHAR(10)
    *пользователь_id : INT <<FK>>
    дата_изменения : DATETIME
    детали : NVARCHAR(MAX)
}

' ============================================
' Связи между таблицами
' ============================================

' Пользователи -> Роли
users }|--|| roles : "имеет роль"

' Сотрудники -> Отделы
employees }|--|| departments : "принадлежит отделу"

' Пользователи -> Сотрудники (опционально)
users }|--o| employees : "может быть сотрудником"

' Пользователи -> Клиенты (опционально)
users }|--o| clients : "может быть клиентом"

' Заказы -> Клиенты
orders }|--|| clients : "сделан клиентом"

' Сборочные задания -> Заказы (опционально)
assemblies }|--o| orders : "связано с заказом"

' Сборочные задания -> Сотрудники (опционально)
assemblies }|--o| employees : "выполняет сотрудник"

' Компоненты в сборке -> Сборочные задания
assembly_components }|--|| assemblies : "входит в сборку"

' Компоненты в сборке -> Компоненты
assembly_components }|--|| components : "содержит компонент"

' Остатки на складе -> Компоненты
inventory }|--|| components : "хранит компонент"

' Остатки на складе -> Склады
inventory }|--|| warehouses : "находится на складе"

' Аудит -> Пользователи
audit }|--|| users : "изменил пользователь"

@enduml
